# qaguru_python_6_19

hw/: pyproject.toml
